--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/png" href="Images/favicon.png"> <!-- link sirve para enlazar el icono en los tabs de Chrome -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro:200&display=swap" rel="stylesheet"> <!-- linea de codigo importada desde google fonts -->
     <link rel="stylesheet" href="estilos.css"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
     <header class="header"> <!-- atributo en linea separación con ; -->
