added media queries

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <title>Leonidas Esteban</title>
     <link rel="icon" type="image/png" href="Images/favicon.png"> <!-- link sirve para enlazar el icono en los tabs de Chrome -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro:200&display=swap" rel="stylesheet"> <!-- linea de codigo importada desde google fonts -->
-    <link rel="stylesheet" href="estilos.css"> 
+    <!-- <link rel="stylesheet" href="media.css" media="screen and (max-width:768px)"/> -->
+    <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- <style>
+        @media screen and (max-width: 768px) {
+            body {
+                border: 10px solid blue;
+            }
+        }
+    </style> -->
 </head>
 <body>
     <header class="header"> <!-- atributo en linea separación con ; -->
