--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style> -->
 </head>
 <body>
-    <header class="header"> <!-- atributo en linea separación con ; -->
+    <header class="header">         <!-- atributo en linea separación con ; -->
         <div class="container">
             <figure class="logo">
                 <img src="Images/logo.png" height="50px" alt="Logo de http://leonidasesteban.com"> <!--alt sirve para poner texto provisional si no hay imagen-->
@@ -145,17 +145,17 @@
     </section>
     <section id="contacto" class="contact">
         <div class="container">
-                <form class="form-email" action="/suscripcion">
-                    <h3>¿Creamos algo juntos?</h3>
+            <form class="form-email" action="/suscripcion">
+                <h3>¿Creamos algo juntos?</h3>
                     <input type="text" placeholder="Déjame tu email" id="email"> <!-- input type es el tipo de campo a usar-->
                     <button>Enviar</button>
                 </form>
-                <div class="social">
-                   <a href="https://twitter.com/leonidasesteban" class="social-link twitter"></a>
-                   <a href="https://facebook.com/leonidas.esteban" class="social-link facebook"></a>
-                   <a href="https://github.com/leonidasesteban" class="social-link github"></a>
-                   <a href="https://instagram.com/leonidasesteban" class="social-link instagram "></a>
-                </div>
+            <div class="social">
+                <a href="https://twitter.com/leonidasesteban" class="social-link twitter"></a>
+                <a href="https://facebook.com/leonidas.esteban" class="social-link facebook"></a>
+                <a href="https://github.com/leonidasesteban" class="social-link github"></a>
+                <a href="https://instagram.com/leonidasesteban" class="social-link instagram "></a>
+            </div>
         </div>
     </section>
     <footer class="footer">
@@ -165,7 +165,7 @@
             </div>
             <div>
                 <p>
-                    Designed with <\3 by  <a href="https://twitter.com/thespianartist"> @thespianartist</a>
+                    Designed with ❤️ by <a href="https://twitter.com/thespianartist"> @thespianartist</a>
                 </p>
             </div>
         </div>
