--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <div class="container">
             <h2 class="event-list-title">Más sobre mi experiencia</h2>
     </div>
+    <!-- iframe se puede insertar cualquier parte de una página web se define alto y ancho dentro de la propiedad -->
+    <!-- height * 100 / width = 315 * 100 / 560 aspecto horizontal -->
+    <!-- width * 100 / height = 560 * 100 / 315 aspecto vertical -->
     <section id="eventos" class="event-list">
         <div class="container">
                 <article class="event">
@@ -113,7 +116,10 @@
                 </article>
                 <article class="event">
                         <figure class="event-imageContainer">
-                            <img class="event-image" src="Images/platzi-conf.jpg" width="500" />
+                            <div class="flexible-video">
+                                <iframe class="youtube-vive" width="560" height="315" src="https://www.youtube.com/embed/LoKvxCSZw5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <!-- <img class="event-image" src="Images/platzi-conf.jpg" width="500" /> -->
                         </figure>
                         <div class="event-detail">
                             <h3 class="event-title">PlatziConf México 2018</h3>
