added icon with icomoon.io

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style> -->
 </head>
 <body>
+    <i class="icon-menu"></i>
     <header class="header">         <!-- atributo en linea separación con ; -->
         <div class="container">
             <figure class="logo">
