added format and media query to button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style> -->
 </head>
 <body>
-    <i class="icon-menu"></i>
+    <i class="icon-menu burger-button"></i>
     <header class="header">         <!-- atributo en linea separación con ; -->
         <div class="container">
             <figure class="logo">
