added format and media query to nav button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <figure class="logo">
                 <img src="Images/logo.png" height="50px" alt="Logo de http://leonidasesteban.com"> <!--alt sirve para poner texto provisional si no hay imagen-->
             </figure>
-            <nav class="menu">
+            <nav class="menu is-active">
                     <ol>
                         <li>
                         <a class="link" href="#portafolio">Portafolio</a> <!-- # es un link vacio,, cuando tiene # más el nombre del id funciona como link interno con / funciona como link externo ./ abre correctamente -->
