--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style> -->
 </head>
 <body>
-    <i class="icon-menu burger-button"></i>
+    <i class="icon-menu burger-button" id="burger-menu"></i>
     <header class="header">         <!-- atributo en linea separación con ; -->
         <div class="container">
             <figure class="logo">
@@ -178,6 +178,25 @@
             </div>
         </div>
     </footer>
+    <script>
+        console.log('Hola mundo, mi primer linea en JS');
+
+        const menu = document.querySelector('.menu');
+        console.log(menu);
+        const burgerButton = document.querySelector('#burger-menu');
+        console.log(burgerButton);
+
+        burgerButton.addEventListener('click', hideShow)
+
+        function hideShow() {
+            if (menu.classList.contains('is-active')) {
+                menu.classList.remove('is-active');
+            } else {
+                menu.classList.add('is-active');
+            }
+        }
+
+    </script>
 </body>
 </html>
 
